# wasm-bindgen-circular-dependency-bug

./: .gitignore  Cargo.toml  package-lock.json  package.json  webpack.config.js
js/: index.js
src/: lib.rs
static/: index.html
